--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <repository>
             <id>nexus-release</id>
             <name>Nexus release repository for IMR</name>
-            <url>http://javadev.imr.no:8081/nexus/content/repositories/releases/</url>
+            <url>http://build.imr.no/nexus/content/repositories/releases/</url>
         </repository>
         <repository>
             <id>repository.springsource.milestone</id>
@@ -37,12 +37,17 @@
         <dependency>
             <groupId>no.imr.nmd.commons.dataset.jaxb</groupId>
             <artifactId>commons-dataset-jaxb</artifactId>
-            <version>0.0.7</version>
+            <version>1.0.1</version>
         </dependency>
         <dependency>
             <groupId>no.imr.nmdapi.common</groupId>
             <artifactId>nmdapi-exceptions</artifactId>
             <version>0.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>no.imr.nmdapi.commons.respones</groupId>
+            <artifactId>nmdapi-commons-respones</artifactId>
+            <version>1.0.2</version>
         </dependency>
     </dependencies>
 </project>
