--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     <build>
-        <finalName>apis#nmdapi#nmddataset#v1</finalName>
+        <finalName>apis#nmdapi#dataset#v1</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -156,7 +156,7 @@
                         <artifactId>tomcat7-maven-plugin</artifactId>
                         <version>2.1</version>
                         <configuration>
-                            <path>/apis/nmdapi/nmddataset/v1</path>
+                            <path>/apis/nmdapi/dataset/v1</path>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -211,7 +211,7 @@
                         <artifactId>tomcat7-maven-plugin</artifactId>
                         <version>2.1</version>
                         <configuration>
-                            <path>/apis/nmdapi/nmddataset/v1</path>
+                            <path>/apis/nmdapi/dataset/v1</path>
                             <port>10112</port>
                         </configuration>
                         <executions>
