--- a/web/pom.xml
+++ b/web/pom.xml
@@ -75,19 +75,19 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
-        <dependency>
+               <dependency>
             <groupId>no.imr.framework.logging.slf4j</groupId>
             <artifactId>logging-framework</artifactId>
         </dependency>
         <dependency>
-            <groupId>no.imr.nmdapi.web.apps</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
+    <groupId>no.imr.nmd.commons.jaxb</groupId>
+    <artifactId>commons-jaxb</artifactId>
+    <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>no.imr.nmd.commons.security</groupId>
             <artifactId>commons-security-jwt</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
