--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,9 +12,9 @@
     <name>Service module - NMDDataset</name>
     <dependencies>
         <dependency>
-            <groupId>no.imr.nmdapi.dataset.dao</groupId>
-            <artifactId>dao</artifactId>
-            <version>${project.version}</version>
+            <groupId>no.imr.nmdapi.dao.file</groupId>
+            <artifactId>nmdapi-file-dao</artifactId>
+            <version>1.0.14</version>
         </dependency>
     </dependencies>
     <properties>
