--- a/web/pom.xml
+++ b/web/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>no.imr.nmdapi.dataset</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <groupId>no.imr.nmdapi.dataset.web</groupId>
     <artifactId>web</artifactId>
