--- a/service/pom.xml
+++ b/service/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>no.imr.nmdapi.dataset</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.3</version>
     </parent>
     <groupId>no.imr.nmdapi.dataset.service</groupId>
     <artifactId>service</artifactId>
