--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>no.imr.nmdapi.dataset</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.4-SNAPSHOT</version>
     </parent>
     <groupId>no.imr.nmdapi.dataset.dao</groupId>
     <artifactId>dao</artifactId>
